--- a/streamlit/requirements.txt
+++ b/streamlit/requirements.txt
@@ -1,10 +1,10 @@
 yfinance==0.1.65
-streamlit==1.8.1
+streamlit==1.11.0
 pandas==1.2.1
 plotly==4.14.3
 click==8.0.4
 protobuf==3.20
 numpy==1.21.6
 xgboost
-sklearn==0.0
+sklearn
 scikit-learn
